Add sync command
Fix migrations & seeders

--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
                 "Kevinpurwito\\LaravelRajabiller\\RajabillerServiceProvider"
             ],
             "aliases": {
-                "Rajabiller": "Kevinpurwito\\LaravelRajabiller\\RajabillerFacade"
+                "Rajabiller": "Kevinpurwito\\LaravelRajabiller\\Facades\\Rajabiller"
             }
         }
     }
